edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "wayplatform/connect/tachograph/dd/v1/sensor_paired.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_calibration_record.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_identification.proto";
import "wayplatform/connect/tachograph/security/v1/authentication.proto";

// Technical Data for Generation 1 VU downloads.
//
// See Appendix 7, Section 2.2.6.6 (TREP 05 Hex).
//
// ASN.1 Definition:
//
//     VuTechnicalDataFirstGen ::= SEQUENCE {
//         vuIdentification VuIdentification,
//         sensorPaired SensorPaired,
//         vuCalibrationData VuCalibrationData,
//         signature SignatureFirstGen
//     }
message TechnicalDataGen1 {
  // Vehicle unit identification data.
  //
  // See Data Dictionary, Section 2.205, `VuIdentification`.
  dd.v1.VuIdentification vu_identification = 1;

  // The single paired sensor (Gen1 only).
  //
  // See Data Dictionary, Section 2.144, `SensorPaired`.
  dd.v1.SensorPaired paired_sensor = 2;

  // All calibration records stored in the VU.
  //
  // See Data Dictionary, Section 2.173, `VuCalibrationData`.
  //
  // ASN.1 Definition:
  //
  //     VuCalibrationData ::= SEQUENCE {
  //         noOfVuCalibrationRecords INTEGER(0..255),
  //         vuCalibrationRecords SET SIZE(noOfVuCalibrationRecords) OF VuCalibrationRecord
  //     }
  repeated dd.v1.VuCalibrationRecord calibration_records = 3;

  // Signature for Gen1 data (RSA, 128 bytes).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  bytes signature = 4;

  // The raw, unparsed binary data of the complete Technical Data transfer value.
  // This field is preserved for data fidelity and lossless round-trips.
  // It includes all data structures and the embedded signature.
  bytes raw_data = 5;

  // Result of cryptographic signature authentication for this transfer.
  // Present when signature verification has been performed.
  tachograph.security.v1.Authentication authentication = 99;
}


